# TTSEngine

./: README.md  pyproject.toml
docs/: README.md  design.md  examples.md
examples/: create_book.py
src/: __init__.py
src/actions/: __init__.py  controller.py  navigation.py
src/communication/: __init__.py  commands.py  events.py
src/modeling/: __init__.py  models.py  state.py
src/providers/: base.py  registry.py  txt_provider.py
tests/: conftest.py  test_actions.py  test_communication.py  test_modeling.py
