[project]
name = "ttse_engine"
version = "0.1.0"
description = "A UI-independent reader engine for TTS applications."
readme = "docs/README.md"
authors = [{name = "Amandaleeanne Shock", email = "a-schock@hotmail.com"}]
license = {text = "MIT"}
dependencies = []

[project.urls]
"Homepage" = "https://github.com/your-org/TTSEngine"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
